--- a/apriori_python/W1S2_Apriori.ipynb
+++ b/apriori_python/W1S2_Apriori.ipynb
@@ -18,67 +18,62 @@
     "from itertools import chain, combinations\n",
     "from optparse import OptionParser\n",
     "from utils import *\n",
+    "import logging\n",
     "\n",
-    "def apriori(itemSetList, minSup, minConf):\n",
-    "    C1ItemSet = getItemSetFromList(itemSetList)\n",
-    "    # Final result global frequent itemset\n",
-    "    globalFreqItemSet = dict()\n",
-    "    # Storing global itemset with support count\n",
-    "    globalItemSetWithSup = defaultdict(int)\n",
+    "class Apriori:\n",
+    "    def __init__(self, itemSetList, minSup, minConf):\n",
+    "        self.itemSetList = itemSetList\n",
+    "        self.minSup = minSup\n",
+    "        self.minConf = minConf\n",
     "\n",
-    "    L1ItemSet = getAboveMinSup(\n",
-    "        C1ItemSet, itemSetList, minSup, globalItemSetWithSup)\n",
-    "    currentLSet = L1ItemSet\n",
-    "    k = 2\n",
+    "    def apriori(self):\n",
+    "        logging.debug(\"Calculating frequent item set\")\n",
+    "        C1ItemSet = getItemSetFromList(self.itemSetList)\n",
+    "        globalFreqItemSet = dict()\n",
+    "        globalItemSetWithSup = defaultdict(int)\n",
+    "        L1ItemSet = getAboveMinSup(\n",
+    "            C1ItemSet, self.itemSetList, self.minSup, globalItemSetWithSup)\n",
+    "        currentLSet = L1ItemSet\n",
+    "        k = 2\n",
+    "        while(currentLSet):\n",
+    "            globalFreqItemSet[k-1] = currentLSet\n",
+    "            candidateSet = getUnion(currentLSet, k)\n",
+    "            candidateSet = pruning(candidateSet, currentLSet, k-1)\n",
+    "            currentLSet = getAboveMinSup(\n",
+    "                candidateSet, self.itemSetList, self.minSup, globalItemSetWithSup)\n",
+    "            k += 1\n",
+    "            logging.debug(f\"Current frequent itemset: {currentLSet}\")\n",
+    "            logging.debug(f\"Global frequent itemset: {globalFreqItemSet}\")\n",
+    "            logging.debug(f\"Global itemset with support count: {globalItemSetWithSup}\")\n",
+    "        rules = associationRule(globalFreqItemSet, globalItemSetWithSup, self.minConf)\n",
+    "        rules.sort(key=lambda x: x[2])\n",
+    "        return globalFreqItemSet, rules\n",
     "\n",
-    "    # Calculating frequent item set\n",
-    "    while(currentLSet):\n",
-    "        # Storing frequent itemset\n",
-    "        globalFreqItemSet[k-1] = currentLSet\n",
-    "        # Self-joining Lk\n",
-    "        candidateSet = getUnion(currentLSet, k)\n",
-    "        # Perform subset testing and remove pruned supersets\n",
-    "        candidateSet = pruning(candidateSet, currentLSet, k-1)\n",
-    "        # Scanning itemSet for counting support\n",
-    "        currentLSet = getAboveMinSup(\n",
-    "            candidateSet, itemSetList, minSup, globalItemSetWithSup)\n",
-    "        k += 1\n",
-    "\n",
-    "    rules = associationRule(globalFreqItemSet, globalItemSetWithSup, minConf)\n",
-    "    rules.sort(key=lambda x: x[2])\n",
-    "\n",
-    "    return globalFreqItemSet, rules\n",
-    "\n",
-    "def aprioriFromFile(fname, minSup, minConf):\n",
-    "    C1ItemSet, itemSetList = getFromFile(fname)\n",
-    "\n",
-    "    # Final result global frequent itemset\n",
-    "    globalFreqItemSet = dict()\n",
-    "    # Storing global itemset with support count\n",
-    "    globalItemSetWithSup = defaultdict(int)\n",
-    "\n",
-    "    L1ItemSet = getAboveMinSup(\n",
-    "        C1ItemSet, itemSetList, minSup, globalItemSetWithSup)\n",
-    "    currentLSet = L1ItemSet\n",
-    "    k = 2\n",
-    "\n",
-    "    # Calculating frequent item set\n",
-    "    while(currentLSet):\n",
-    "        # Storing frequent itemset\n",
-    "        globalFreqItemSet[k-1] = currentLSet\n",
-    "        # Self-joining Lk\n",
-    "        candidateSet = getUnion(currentLSet, k)\n",
-    "        # Perform subset testing and remove pruned supersets\n",
-    "        candidateSet = pruning(candidateSet, currentLSet, k-1)\n",
-    "        # Scanning itemSet for counting support\n",
-    "        currentLSet = getAboveMinSup(\n",
-    "            candidateSet, itemSetList, minSup, globalItemSetWithSup)\n",
-    "        k += 1\n",
-    "\n",
-    "    rules = associationRule(globalFreqItemSet, globalItemSetWithSup, minConf)\n",
-    "    rules.sort(key=lambda x: x[2])\n",
-    "\n",
-    "    return globalFreqItemSet, rules"
+    "    def aprioriFromFile(self, fname):\n",
+    "        try:\n",
+    "            C1ItemSet, itemSetList = getFromFile(fname)\n",
+    "        except FileNotFoundError:\n",
+    "            print(\"File not found\")\n",
+    "            return None, None\n",
+    "        except PermissionError:\n",
+    "            print(\"Access denied\")\n",
+    "            return None, None\n",
+    "        globalFreqItemSet = dict()\n",
+    "        globalItemSetWithSup = defaultdict(int)\n",
+    "        L1ItemSet = getAboveMinSup(\n",
+    "            C1ItemSet, itemSetList, self.minSup, globalItemSetWithSup)\n",
+    "        currentLSet = L1ItemSet\n",
+    "        k = 2\n",
+    "        while(currentLSet):\n",
+    "            globalFreqItemSet[k-1] = currentLSet\n",
+    "            candidateSet = getUnion(currentLSet, k)\n",
+    "            candidateSet = pruning(candidateSet, currentLSet, k-1)\n",
+    "            currentLSet = getAboveMinSup(\n",
+    "                candidateSet, itemSetList, self.minSup, globalItemSetWithSup)\n",
+    "            k += 1\n",
+    "        rules = associationRule(globalFreqItemSet, globalItemSetWithSup, self.minConf)\n",
+    "        rules.sort(key=lambda x: x[2])\n",
+    "        return globalFreqItemSet, rules"
    ]
   },
   {
@@ -98,7 +93,8 @@
     "               ['A','D'], \n",
     "               ['A','B','D','F'], \n",
     "               ['A','B','C']]\n",
-    "freqItemSet, rules = apriori(itemSetList, minSup=0.2, minConf=0.2)"
+    "apriori = Apriori(itemSetList, minSup=0.2, minConf=0.2)\n",
+    "freqItemSet, rules = apriori.apriori()"
    ]
   },
   {
@@ -196,21 +192,38 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apriori = Apriori(itemSetList, minSup=0.2, minConf=0.2)\n",
+    "freqItemSetFromFile, rulesFromFile = apriori.aprioriFromFile(fname='filename.csv')"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({1: {frozenset({'apple'}),\n",
-       "   frozenset({'beer'}),\n",
-       "   frozenset({'rice'}),\n",
-       "   frozenset({'milk'}),\n",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  },
+  "toc-showcode": true,
+  "toc-showtags": false
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
        "   frozenset({'mango'}),\n",
        "   frozenset({'chicken'})},\n",
        "  2: {frozenset({'milk', 'rice'}),\n",
